<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".SettingActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtChonTheme"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textColor="#030303" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbBlack"
            android:id="@+id/radioButtonBlack"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbWhite"
            android:id="@+id/radioButtonWhite"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"/>

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtChonKieuHienSoThuc"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textColor="#030303" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup2">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbDauCham"
            android:id="@+id/radioButtonDauCham"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbDauPhay"
            android:id="@+id/radioButtonDauPhay"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"/>

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/btnApDung"
        android:id="@+id/btnApDung"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"/>

</LinearLayout>
